[package]
name = "real_time_app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
sqlx = { version = "0.7.4", features = [ "sqlite", "runtime-tokio" ] }
serde = {version = "1.0.203", features = ["derive"]}
tokio = {version = "1.38.0", features = ["full"]}
serde_json = "1.0.120"
dotenvy = "0.15.7"
